feat: revamp welcomestrip and help popover (#230)
