# api/src/entities/models/user.ts
@@ -1,15 +1,10 @@
 import mongoose, { Document, Schema } from 'mongoose';
 
-export interface IUserSettings {
-  showWelcomeStrip: boolean;
-}
-
 interface IUser {
   email: string;
   password: string;
   trackedShows: number[];
   oneTimeCode?: number;
-  settings: IUserSettings;
 }
 
 interface UserDoc extends IUser, Document {
@@ -23,9 +18,6 @@ const UserSchema = new Schema<UserDoc>(
     password: { type: String, required: true },
     trackedShows: [{ type: Number }],
     oneTimeCode: { type: Number },
-    settings: {
-      showWelcomeStrip: { type: Boolean, default: true },
-    },
   },
   { timestamps: true }
 );
